<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        android:contentDescription="@string/tmbl_language"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:contentDescription="@string/tmbl_logout"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        android:contentDescription="@string/tmbl_maps"
        app:showAsAction="ifRoom"
        />


</menu>